Chart change unit type fixed

--- a/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
+++ b/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
@@ -1,16 +1,17 @@
 <div class="w-full flex flex-col mb-4 md:mb-6 lg:mb-8">
     <p class="leading-[180%] border-b px-[12%] border-b-light-text2 dark:border-b-dark-text2 pb-3 text-right text-sm font-medium lg:text-base text-dark-text4 dark:text-light-text4">تاریخچه قیمت</p>
-    @if (historyData) {
-        <table class="w-full leading-[180%] flex flex-col">
-            <thead class="border-b border-b-light-text4 dark:border-b-dark-text4 w-full flex-1 flex py-2.5">
-                <tr class="w-full flex flex-1">
-                    <td class="text-center w-1/3 dark:text-white text-dark leading-[180%] text-xs font-normal">تغییرات</td>
-                    <td class="text-center w-1/3 dark:text-white text-dark leading-[180%] text-xs font-normal">{{ item?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }} {{ item?.faGroupName !== 'بازارهای ارزی' ? (currentUnit() === 0 ? '(تومان)' : '(دلار)') : '' }}</td>
-                    <td class="text-center w-1/3 dark:text-white text-dark leading-[180%] text-xs font-normal">روز</td>
-                </tr>
-            </thead>
     
-            <tbody class="w-full flex flex-col">
+    <table class="w-full leading-[180%] flex flex-col">
+        <thead class="border-b border-b-light-text4 dark:border-b-dark-text4 w-full flex-1 flex py-2.5">
+            <tr class="w-full flex flex-1">
+                <td class="text-center w-1/3 dark:text-white text-dark leading-[180%] text-xs font-normal">تغییرات</td>
+                <td class="text-center w-1/3 dark:text-white text-dark leading-[180%] text-xs font-normal">{{ item?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }} {{ item?.faGroupName !== 'بازارهای ارزی' ? (currentUnit() === 0 ? '(تومان)' : '(دلار)') : '' }}</td>
+                <td class="text-center w-1/3 dark:text-white text-dark leading-[180%] text-xs font-normal">روز</td>
+            </tr>
+        </thead>
+
+        <tbody class="w-full flex flex-col">
+            @if (historyData) {
                 <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
                     @if (item?.faGroupName === 'بازارهای ارزی') {
                         <td class="table-item-base {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</td>
@@ -35,10 +36,37 @@
                         <td class="table-item-base dark:text-white text-dark rtl">{{ range.days }} روز</td>
                     </tr>
                 }
-            </tbody>
-        </table>
-    }
-    @else {
-        <div class="w-full rounded-sm h-40 animate-pulse bg-light-border dark:bg-dark-border"></div>
-    }
+            }
+            @else {
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base dark:text-white text-dark">امروز</td>
+                </tr>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base dark:text-white text-dark rtl">30 روز</td>
+                </tr>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base dark:text-white text-dark rtl">60 روز</td>
+                </tr>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base dark:text-white text-dark rtl">90 روز</td>
+                </tr>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                    <td class="table-item-base dark:text-white text-dark rtl">180 روز</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    
+    <!-- <div class="w-full rounded-sm h-40 animate-pulse bg-light-border dark:bg-dark-border"></div> -->
+    
 </div>
