--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -107,11 +107,11 @@
             </div>
         </div>
 
-        <app-chart class="w-full" [historyData]="historyData" [chartType]="currentChartType()" />
+        <app-chart class="w-full" [item]="currencyItem" [historyData]="historyData" [currentUnit]="currentSupportCurrencyId()" [chartType]="currentChartType()" />
         <app-changes-table class="w-full" [historyData]="historyData" [item]="currencyItem" [currentUnit]="currentSupportCurrencyId()" />
     </div>
 
-    <div class="w-full lg:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
+    <aside class="w-full lg:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
         <app-currency-overview class="w-full" [currentSelected]="currencyItem" (currentUnit)="onCurrencyUnitChange($event)" [relatedItems]="currentCategoryItems" />
-    </div>
+    </aside>
 </main>
