--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -1,17 +1,8 @@
-<div class="relative w-full h-full bg-light2 dark:bg-dark2 rounded-lg overflow-hidden font-sans mb-6 lg:mb-10">
-
-    <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
-      <span class="text-[80px] font-bold text-white opacity-[0.03] select-none tracking-tighter">
-        Bitpin
-      </span>
-    </div>
+<div class="relative w-full h-full bg-light2 dark:bg-theme-black rounded-lg overflow-hidden font-sans mb-6 lg:mb-10">
   
-    <div class="relative flex flex-wrap items-center justify-between px-4 py-3 border-b border-[#2a2e39]">
+    <div class="{{ chartType() === 0 ? 'opacity-100' : 'opacity-0' }} flex relative items-center justify-between px-4 py-3 border-b border-[#2a2e39]">
      
-      <div class="flex items-center gap-4">
-        <h2 class="text-lg font-bold text-text-primary tracking-wide">
-          THE/USDT
-        </h2>
+      <div class="w-fit flex items-center gap-4">
        
         <span class="px-1.5 py-0.5 text-[11px] font-medium text-text-secondary bg-chart-panel rounded border border-[#2a2e39]">
           {{ activeTimeframe() }}
@@ -25,14 +16,34 @@
           </span>
          
           <span
-            class="text-sm font-medium"
+            class="text-sm font-medium flex"
             [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
             {{ priceChange() }}
+          </span>
+          <span
+            class="text-sm font-medium flex"
+            [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
+            {{ close() }}<p class="text-dark-text4 dark:text-light-text4 text-sm">C</p>
+          </span>
+          <span
+            class="text-sm font-medium flex"
+            [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
+            {{ low() }}<p class="text-dark-text4 dark:text-light-text4 text-sm">L</p>
+          </span>
+          <span
+            class="text-sm font-medium flex"
+            [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
+            {{ high() }}<p class="text-dark-text4 dark:text-light-text4 text-sm">H</p>
+          </span>
+          <span
+            class="text-sm font-medium flex"
+            [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
+            {{ open() }}<p class="text-dark-text4 dark:text-light-text4 text-sm">O</p>
           </span>
         </div>
       </div>
   
-      <div class="flex items-center gap-1">
+      <div class="w-fit flex items-center gap-1">
         @for (tf of timeframes; track tf) {
           <button
             (click)="changeTimeframe(tf)"
@@ -46,6 +57,6 @@
       </div>
     </div>
   
-    <div #chartContainer class="relative w-full h-63 md:h-82 font-iranyekan bg-light2 dark:bg-dark2 text-light-text4 dark:text-dark-text4"></div>
+    <div #chartContainer id="chartContainer" class="relative w-full z-0 h-63 md:h-82 font-iranyekan bg-light2 dark:bg-theme-black text-light-text4 dark:text-dark-text4"></div>
    
 </div>
