--- a/src/styles.css
+++ b/src/styles.css
@@ -87,6 +87,10 @@
 
 }
 
+#chartContainer svg {
+    display: none;
+}
+
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
