--- a/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
+++ b/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
@@ -1,5 +1,5 @@
 <div class="px-5 py-4 rounded-2xl lg:border lg:border-light-border2 lg:dark:border-dark-border2 lg:mt-28">
-    <p class="leading-[180%] dark:text-white text-dark text-xl lg:text-base text-right mb-3">وضعیت {{currentSelected?.faGroupName}} در یک نگاه</p>
+    <p class="leading-[180%] dark:text-white text-dark text-sm lg:text-base text-right mb-3">وضعیت {{currentSelected?.faGroupName}} در یک نگاه</p>
     
     <div class="flex flex-row justify-between lg:flex-col mb-3 lg:mb-6">
         <div class="overflow-hidden flex flex-row-reverse mb-0 lg:mb-3 {{ currentSelected?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">
