Skeleton animation added

--- a/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
+++ b/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
@@ -17,8 +17,17 @@
         </div>
     </div>
     <div class="flex flex-col gap-4 w-full">
-        @for (item of currentList(); track item.id) {
-            <app-related-item class="w-full" [item]="item" [index]="$index" [currentUnit]="currentSupportCurrencyId()" />
+        @if (currentList()) {
+            @for (item of currentList(); track item.id) {
+                <app-related-item class="w-full" [item]="item" [index]="$index" [currentUnit]="currentSupportCurrencyId()" />
+            }
+        }
+        @else {
+            <app-related-empty-item />
+            <app-related-empty-item />
+            <app-related-empty-item />
+            <app-related-empty-item />
+            <app-related-empty-item [index]="4" />
         }
     </div>
 </div>
