--- a/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
@@ -1,4 +1,4 @@
-<div (click)="selectItem()" class="w-full justify-center flex-1 px-3 lg:px-0 lg:pt-1 pb-2 lg:pl-2 flex items-center hover:cursor-pointer lg:hover:bg-light-text3 lg:rounded-lg lg:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 lg:border-b-0' : ''}}">
+<article (click)="selectItem()" class="w-full justify-center flex-1 px-3 lg:px-0 lg:pt-1 pb-2 lg:pl-2 flex items-center hover:cursor-pointer lg:hover:bg-light-text3 lg:rounded-lg lg:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 lg:border-b-0' : ''}}">
     <div class="flex flex-1 flex-col">
         <div class="flex w-full items-center justify-between">
             @if (item?.faGroupName === 'بازارهای ارزی') {
@@ -25,4 +25,4 @@
     </div>
     <img class="w-11 h-11 rounded-full object-cover ml-2.5" src={{item?.img}} alt={{item?.title}}>
     
-</div>
+</article>
