--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -52,7 +52,7 @@
                     <path id="Path_215" data-name="Path 215" d="M14.953,2.547A12.643,12.643,0,1,0,27.6,15.19,12.649,12.649,0,0,0,14.953,2.547Zm0,2A10.643,10.643,0,1,1,4.31,15.19,10.648,10.648,0,0,1,14.953,4.547Z" transform="translate(-2.31 -2.547)" fill-rule="evenodd"/>
                     <path id="Path_216" data-name="Path 216" d="M30.441,28.789l-6.276-6.276a1,1,0,1,0-1.414,1.414L29.027,30.2a1,1,0,1,0,1.414-1.414Z" transform="translate(-2.31 -2.547)" fill-rule="evenodd"/>
                 </svg>
-                <input #searchInput type="text" id="searchInput" name="searchInput" (input)="filterList($event)" (focusout)="inputMouseEnter($event)" (mouseenter)="inputMouseEnter($event)" (mouseleave)="inputMouseLeave($event)" class="rtl transition duration-300 ease-out pl-[0.8rem] pr-[2.7rem] rounded-semi outline-none bg-transparent border border-light-text2 h-full dark:border-dark-text2 text-light-text2 dark:text-dark-text2 w-full text-right select-none" placeholder="عنوان را در {{currentCategory()}} جستجو کنید">
+                <input #searchInput type="text" id="searchInput" name="searchInput" class="rtl focus:border-green-btn transition duration-300 ease-out pl-[0.8rem] pr-[2.7rem] rounded-semi outline-none bg-transparent border border-light-text2 h-full dark:border-dark-text2 text-light-text2 dark:text-dark-text2 w-full text-right select-none" placeholder="عنوان را در {{currentCategory()}} جستجو کنید">
             </div>
         </div>
     
