--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -69,42 +69,28 @@
             <div class="flex p-0 justify-between md:justify-start mb-4 md:mb-0 md:p-2 md:rounded-lg gap-0 md:gap-4 md:border md:border-light-text4 md:dark:border-dark-text4 my-2 w-full md:w-auto">
                 <div (click)="onChartTypeChange(1)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 1 ? 'border-b-green-btn text-green-btn' : 'border-b-dark-text4 text-dark-text4' }} ">
                     <p class="block md:hidden text-sm font-normal duration-300 ease-in-out leading-[180%]">نمودار خطی</p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
+                    <svg 
                         viewBox="0 0 24 24"
                         class="w-6 h-6 fill-none duration-300 ease-in-out {{ currentChartType() === 1 ? 'text-green-btn' : 'text-dark-text4' }}"
-                    >
-                        <path
-                            stroke="currentColor"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="1.5"
-                            d="M9 22h6c5 0 7-2 7-7V9c0-5-2-7-7-7H9C4 2 2 4 2 9v6c0 5 2 7 7 7">
-                        </path>
-                        <path
-                            stroke="currentColor"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="1.5"
-                            d="m7.33 14.49 2.38-3.09c.34-.44.97-.52 1.41-.18l1.83 1.44c.44.34 1.07.26 1.41-.17l2.31-2.98">
-                        </path>
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        >
+                        <path d="M6.75 15L10.5 11.25L13.5 13.5L17.25 9M6.75 20.25H17.25C18.9069 20.25 20.25 18.9069 20.25 17.25V6.75C20.25 5.09315 18.9069 3.75 17.25 3.75H6.75C5.09315 3.75 3.75 5.09315 3.75 6.75V17.25C3.75 18.9069 5.09315 20.25 6.75 20.25Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
 
                 <div (click)="onChartTypeChange(0)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 0 ? 'border-b-green-btn text-green-btn' : 'border-b-dark-text4 text-dark-text4' }}">
                     <p class="block md:hidden text-sm duration-300 ease-in-out leading-[180%]">نمودار کندلی</p>
                     <svg
-                        xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="w-6 h-6 fill-none duration-300 ease-in-out {{ currentChartType() === 0 ? 'text-green-btn' : 'text-dark-text4' }}"
-                    >
-                        <path
-                            stroke="currentColor"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="1.5"
-                            d="M7 10.74v3.2M12 9v6.68M17 10.74v3.2M9 22h6c5 0 7-2 7-7V9c0-5-2-7-7-7H9C4 2 2 4 2 9v6c0 5 2 7 7 7">
-                        </path>
+                        >
+                        <path d="M16 10V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 13L8 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
             </div>
