--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="fixed z-[3] bg-light2 dark:bg-dark2 w-full h-16 flex items-center justify-start border-b border-b-light-border dark:border-b-dark-border">
+<header class="fixed z-[3] bg-light2 dark:bg-dark2 w-full h-16 flex items-center justify-between border-b border-b-light-border dark:border-b-dark-border mx-auto px-4 lg:px-18 xl:px-41">
     <div class="w-6 h-6 cursor-pointer flex justify-center items-center" (click)="changeTheme()">
         <svg
             *ngIf="themeService.getStringTheme() === 'light'"
@@ -31,5 +31,8 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0711 19.0711C18.7986 19.3435 18.3569 19.3435 18.0844 19.0711L17.4266 18.4133C17.1542 18.1408 17.1542 17.6991 17.4266 17.4266C17.6991 17.1542 18.1408 17.1542 18.4133 17.4266L19.0711 18.0844C19.3435 18.3569 19.3435 18.7986 19.0711 19.0711Z"/>
             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.57337 6.57337C6.30091 6.84583 5.85917 6.84583 5.58671 6.57337L4.92893 5.91559C4.65647 5.64313 4.65647 5.20139 4.92893 4.92893C5.20139 4.65647 5.64313 4.65647 5.91559 4.92893L6.57337 5.58671C6.84583 5.85916 6.84583 6.30091 6.57337 6.57337Z"/>
         </svg>
+    </div>
+    <div>
+        ارزیاب
     </div>
 </header>
