--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -32,7 +32,10 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.57337 6.57337C6.30091 6.84583 5.85917 6.84583 5.58671 6.57337L4.92893 5.91559C4.65647 5.64313 4.65647 5.20139 4.92893 4.92893C5.20139 4.65647 5.64313 4.65647 5.91559 4.92893L6.57337 5.58671C6.84583 5.85916 6.84583 6.30091 6.57337 6.57337Z"/>
         </svg>
     </div>
-    <div>
-        ارزیاب
+    <div class="h-full flex items-center gap-2">
+        <p class="text-green-btn text-lg tracking-wide">ارزیاب</p>
+        <div class="h-full w-auto py-4.5 ">
+            <img class="h-full object-cover w-full" src="assets/images/arzyab_main.png" alt="">
+        </div>
     </div>
 </header>
