--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -26,7 +26,7 @@
     <div class="relative w-full {{ historyData ? 'hidden' : 'flex' }} rounded-lg mb-6 lg:mb-10 z-0 h-75 md:h-94 text-transparent animate-pulse bg-light-border dark:bg-dark-border"></div>
 
     <div #chartContainer id="chartContainer" class="relative {{ historyData ? 'flex' : 'hidden' }} w-full z-0 h-63 md:h-82 font-iranyekan bg-light2 dark:bg-theme-black text-light-text4 dark:text-dark-text4">
-      <div class="absolute {{ chartType() === 0 ? 'opacity-0 lg:opacity-100' : 'opacity-0' }} left-0 top-0 hidden lg:flex items-center gap-2 p-2 z-[2]">
+      <div class="absolute {{ chartType() === 0 ? 'opacity-0 md:opacity-100' : 'opacity-0' }} left-0 top-0 hidden lg:flex items-center gap-2 p-2 z-[2]">
         <span
           class="text-xs font-mono font-medium"
           [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
