--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -1,4 +1,4 @@
-<main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 lg:px-18 lg:pb-8 lg:pt-24 lg:flex-row-reverse xl:pt-29 xl:px-41 xl:pb-16 flex-col flex-nowrap justify-between items-start">
+<main class="w-full min-h-[var(--screen-height)] bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 lg:px-18 lg:pb-8 lg:pt-24 lg:flex-row-reverse xl:pt-29 xl:px-41 xl:pb-16 flex-col flex-nowrap justify-between items-start">
     <div class="w-full lg:w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
         <app-breadcrumb [items]="breadCrumbItems" />
         <div class="w-full flex justify-between items-center gap-2">
@@ -15,13 +15,14 @@
                     </svg>
                     <input
                         #searchInput type="text" id="searchInput" name="searchInput"
+                        [(ngModel)]="inputValue"
                         (focus)="inputFocus()"
                         (input)="filterList($event)"
                         class="rtl transition duration-300 ease-out pl-[2.5rem] peer pr-[2.7rem] rounded-semi outline-none border-transparent bg-neutral-50 dark:bg-neutral-700 border focus:border-green-btn hover:not-focus:border-light-text2 hover:not-focus:dark:border-dark-text2 h-full text-dark-text dark:text-light-text w-full text-right select-none"
                         autocomplete="off"
                         placeholder=" "
                     >
-                    <i class="bi bi-x-circle-fill peer-[:not(:placeholder-shown)]:flex hidden hover:cursor-pointer text-light-text2 dark:text-dark-text2 absolute top-1/2 -translate-y-1/2 left-4"></i>
+                    <i (click)="removeInput()" class="bi bi-x-circle-fill peer-[:not(:placeholder-shown)]:flex hidden hover:cursor-pointer text-light-text2 dark:text-dark-text2 absolute top-1/2 -translate-y-1/2 left-4"></i>
                     <p class="absolute text-light-text2 dark:text-dark-text2 top-1/2 -translate-y-1/2 right-[2.7rem] pointer-events-none peer-[:not(:placeholder-shown)]:hidden">عنوان را در {{currencyItem?.faGroupName}} جستجو کنید</p>
                 </div>
                 
@@ -41,8 +42,8 @@
                 <div class="flex md:flex-col flex-row justify-between md:justify-start w-full md:w-auto mb-2 md:mb-0">
                     <p class="text-right text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%]">کمترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
                     <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] block md:hidden">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
-                    <div class="items-center gap-1.25 hidden {{ currencyItem ? ' md:flex ' : 'hidden'}}">
+                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'hidden md:block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
+                    <div class="items-center gap-1.25 {{ currencyItem ? 'hidden md:flex' : 'hidden'}}">
                         <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
                         <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
                     </div>
@@ -73,9 +74,8 @@
                         viewBox="0 0 24 24"
                         class="w-6 h-6 fill-none duration-300 ease-in-out {{ currentChartType() === 1 ? 'text-green-btn' : 'text-dark-text4' }}"
                         fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                        >
-                        <path d="M6.75 15L10.5 11.25L13.5 13.5L17.25 9M6.75 20.25H17.25C18.9069 20.25 20.25 18.9069 20.25 17.25V6.75C20.25 5.09315 18.9069 3.75 17.25 3.75H6.75C5.09315 3.75 3.75 5.09315 3.75 6.75V17.25C3.75 18.9069 5.09315 20.25 6.75 20.25Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3 9L9.65533 13.7538C9.85422 13.8959 10.1267 13.8733 10.2995 13.7005L13.7005 10.2995C13.8733 10.1267 14.1458 10.1041 14.3447 10.2462L21 15M6 21H18C19.6569 21 21 19.6569 21 18V6C21 4.34315 19.6569 3 18 3H6C4.34315 3 3 4.34315 3 6V18C3 19.6569 4.34315 21 6 21Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
 
